--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   },
   "devDependencies": {
     "vite": "^4.2.0"
+  },
+  "dependencies": {
+    "fontawesome-free": "^1.0.4",
+    "iconify-icon": "^1.0.7"
   }
 }
